--- a/Home.html
+++ b/Home.html
@@ -18,6 +18,12 @@
         .buttons{
             margin: 50% 0%;
             background: green;
+            border: none;
+            color: white;
+            font-size: 16px;
+            width: 100px;
+            height: 30px;
+            border-radius: 6px;
         }
     </style>
 
@@ -28,7 +34,7 @@
             <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
         </div>
         <div class="main-text">
-            <button class="buttons"></button>
+            <button class="buttons">Test</button>
         </div>
     </div>
 </body>
