--- a/Home.html
+++ b/Home.html
@@ -14,9 +14,9 @@
             width: 30%;
             float: right;
             text-align: center;
+            margin: 50% 0%;
         }
         .buttons{
-            margin: 50% 0%;
             background: green;
             border: none;
             color: white;
@@ -24,6 +24,7 @@
             width: 100px;
             height: 30px;
             border-radius: 6px;
+            margin: 5px;
         }
     </style>
 
@@ -34,7 +35,10 @@
             <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
         </div>
         <div class="main-text">
-            <button class="buttons">Test</button>
+            <ul>
+                <button class="buttons">Test</button>
+                <button class="buttons">Home</button>
+            </ul>
         </div>
     </div>
 </body>
