--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
 
 <script>
 // function([string1, string2],target id,[color1,color2])
- consoleText(['Nicholas Falcon', 'Console Text', 'Made with Love.'], 'text',['AliceBlue','rebeccapurple','lightblue']);
+ consoleText(['Nicholas Falcon', 'Compiled Without Errors.', 'Made with Love.'], 'text',['AliceBlue','rebeccapurple','lightblue']);
 
 function consoleText(words, id, colors) {
   if (colors === undefined) colors = ['#fff'];
